# BenSalah-Khalia-GameAI

./: Arbitre.java  SETUP_INSTRUCTIONS.md  bot_debug_player2.txt  rapport.tex  report.tex  test_game.bat
c_version/: CMakeLists.txt  README.md  ai_algorithms.h  bot.cpp  config.h  game_engine.h  game_manager.h  game_rules.h  main.cpp
python_version/: ai_algorithms.py  bot.py  config.py  game_engine.py  game_manager.py  game_rules.py  main.py
